# gitea-backup-restore-process

./: .dockerignore  .drone.yml  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.base.yml  docker-compose.e2e.ftp.yml  docker-compose.e2e.mysql.ftp.yml  docker-compose.e2e.mysql.s3.yml  docker-compose.e2e.postgres-ftp.yml  docker-compose.e2e.postgres.ftp.yml  docker-compose.e2e.postgres.s3.yml  docker-compose.e2e.postgres.yml  docker-compose.e2e.yml  docker-compose.yaml  dockerfile  dockerfile.dev  gitea.config.dev  go.mod  go.sum  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yml  parallel-e2e.yml
cmd/gitea-backup/: main.go
cmd/gitea-restore/: main.go
docker-compose/: e2e.mysql.ftp.yml  e2e.mysql.s3.yml  e2e.postgres.ftp.yml  e2e.postgres.s3.yml  ftp.yml  mysql.yml  postgres.yml  s3.yml
docs/: index.md
gitea_backup_restore/: backup.py  restore.py
gitea_backup_restore/config/: __init__.py
gitea_backup_restore/log/: __init__.py
internal/compression/: zip.go
internal/config/: config.go  config_test.go  gitea.go  gitea_test.go
internal/database/: database.go  database_test.go  mysql.go  postgres.go  sqlite.go
internal/files/: files.go
internal/history/: history.go  history_test.go
internal/storage/: ftp.go  s3.go  s3_test.go  storage.go
pkg/logger/: logger.go
tests/: test_config.py
tests/e2e/: README.md  basic_e2e_test.sh  e2e.go  e2e.mysql.ftp.sh  e2e.mysql.s3.sh  e2e.postgres.ftp.sh  e2e.postgres.s3.sh  e2e_test.go  ftp_e2e_test.sh  gitea_bootstrap.sh  go.mod  go.sum  local_e2e_test.sh  postgres_e2e_test.sh  (+2 more)
(+13 files in other folders)
