[tool.poetry]
name = "gitea-backup-restore"
version = "0.1.0"
description = "Backup and restore process for Gitea"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "~1.9.2"
PyYAML = "^6.0"
boto3 = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
lazydocs = "^0.4.8"
python-dotenv = "^0.20.0"
mkdocs = "^1.3.1"
mkdocs-coverage = "^0.2.5"
mkdocs-material = "^8.5.3"
mkdocs-awesome-pages-plugin = "^2.8.0"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-ra -q --cov=gitea_backup_restore --cov-report=term --cov-report=html"
testpaths = [
    "tests",
]

[virtualenvs]
create = true
in-project = true

[tool.poetry.scripts]
gitea-backup = 'gitea_backup_restore.backup:main'
gitea-restore = 'gitea_backup_restore.restore:main'

[tool.black]
line-length = 88

[tool.isort]
profile = 'black'